--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
-  }
+    "express": "^4.21.2",
+    "puppeteer": "^24.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kramels23/maps-and-mods-tendances.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Kramels23/maps-and-mods-tendances/issues"
+  },
+  "homepage": "https://github.com/Kramels23/maps-and-mods-tendances#readme",
+  "description": ""
 }
